1999-12-17  Andreas Jaeger  <aj@suse.de>

	* stdlib/Versions: Export __cxa_atexit and __cxa_finalize.

1999-12-16  Mark Mitchell  <mark@codesourcery.com>

	* stdlib/Makefile (routines): Add cxa_atexit and cxa_finalize.
	* stdlib/exit.h (flavor): Add ef_cxa.
	(exit_function): Add cxa variant.
	* stdlib/exit.c (exit): Handle ef_cxa exit functions.
	* stdlib/cxa_atexit.c: New file.
	* stdlib/cxa_finalize.c: New file.

1999-12-27  Ulrich Drepper  <drepper@cygnus.com>

	* iconvdata/gb2312.c: Update mapping of GB 0x212c from latest
	Unicode tables.

1999-12-26  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/fxstat64.c: Rename have_no_stat64 to
	__have_no_stat64.
	* sysdeps/unix/sysv/linux/lxstat64.c: Likewise.
	* sysdeps/unix/sysv/linux/xstat64.c: Likewise.

	* sysdeps/unix/sysv/linux/mips/bits/resource.h: Remove inclusion
	of <asm/resource.h>.

1999-12-26  Philip Blundell  <philb@gnu.org>

	* sysdeps/unix/sysv/linux/arm/syscalls.list: Remove vm86.  Set
	argument count for `syscall' to 7.
	* sysdeps/unix/sysv/linux/arm/sysdep.h: Add support for syscalls
	with more than five arguments.
	(DOARGS_5, UNDOARGS_5): Don't corrupt the calling stack frame.

1999-12-26  Ulrich Drepper  <drepper@cygnus.com>

	* locale/programs/ld-collate.c (collate_output): Don't start with empty
	extrapool and indirectpool obstacks since we need the offsets to be
	nonzero.
	(collate_read): Call load_locale, not find_locale.
	* locale/programs/ld-ctype.c (ctype_finish): If LC_CTYPE category
	wasn't defined in the file also initialize repertoire if possible.
	* locale/programs/ld-time.c (time_finish): Fix message string.
	* locale/programs/linereader.c: Cast parameters of lr_error to
	correct type to prevnet warning.
	* locale/programs/localedef.c (load_locale): New file.
	* locale/programs/localedef.h: Add its prototype.
	* locale/programs/repertoire.c (repertoire_new_char): Add missing
	parameters to lr_error call.

	* localedata/Makefile: Enable running tests again.